--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <style type="text/css">
       body {
         color: white;
-        background-image: url("assets/img/bg.jpeg");
+        background-image: url("assets/img/bg.jpg");
         background-color: rgba(0, 0, 0, 0.6);
         background-position: center;
         background-size: cover;
@@ -38,18 +38,13 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Simples Vitamina de 6 Ingredientes Derrete Muita Gordura</b></h3>
+            <h3 class="my-4"><b>Essa Simples Vitamina de 5 Ingredientes Derrete Muita Gordura</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6226ac18aa8f7e000965d88e">var s=document.createElement("script");s.src="https://cdn.converteai.net/8b03b5e9-1e95-4b45-9063-037ac9b350ab/players/6226ac18aa8f7e000965d88e/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_6234b8ccb87e200009b47d57">var s=document.createElement("script");s.src="https://cdn.converteai.net/b295652d-3d66-482f-84d5-8c4d39567fd6/players/6234b8ccb87e200009b47d57/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão -->
-            <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/8yj82EU" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO OBTER ACESSO!</span>
-                <span class="span-btn2">(atenção: vagas limitadas)</span>
-              </a>
-            </div>
+            
 
             <!-- Termos de Uso e Política de Privacidade -->
             <div class="text-white mt-4"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
@@ -58,9 +53,6 @@
       </div>
     </header>
 
-    <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 1637000); // temporização da Call to Action (em milissegundos)
-    </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
