--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Meu irmão perdeu 6 kl em 15 dias... vou começar hj rsrs</td>
+                        <td class="fb-comments-comment-text">Minha irmã perdeu 6 kl em 15 dias... vou começar hj rsrs</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
